Feat: 시그널 index 추가